--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,3 +12,8 @@ r2d2 = "0.8.10"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+
+# for JWT tokens
+jsonwebtoken = "8.1"
+actix-service = "2.0.3"
+futures = "0.3.31"
