--- a/gameserver/Cargo.toml
+++ b/gameserver/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1.44.2", features = ["full"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+chrono = { version = "0.4.40", features = ["serde"] }
