--- a/gameserver/Cargo.toml
+++ b/gameserver/Cargo.toml
@@ -23,3 +23,5 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 chrono = { version = "0.4.40", features = ["serde"] }
+reqwest = { version = "0.12.15", features = ["json"] }
+uid = "0.1.8"
