--- a/gameengine/Cargo.toml
+++ b/gameengine/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-card = "0.1.0"
-deck = "0.3.0"
-player = "0.1.1"
 rand = "0.8"
 uuid = { version = "1", features = ["v4", "serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_derive = "1.0"
+lazy_static = "1.5.0"
