--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-ws = "0.3.0"
+actix-web-lab = "0.23.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
 r2d2 = "0.8.10"
@@ -30,3 +31,4 @@ log = "0.4.27"
 env_logger = "0.11.8"
 uid = "0.1.8"
 tokio-stream = "0.1.17"
+parking_lot = "0.12.4"
