--- a/backend/diesel.toml
+++ b/backend/diesel.toml
@@ -6,4 +6,4 @@ file = "src/database/schema.rs"
 custom_type_derives = ["diesel::query_builder::QueryId", "Clone"]
 
 [migrations_directory]
-dir = "C:\\Users\\Erwan Blancard\\Documents\\La Plateforme\\ProjetCDA\\backend\\migrations"
+dir = "migrations"
