--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --outDir ../dist",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,8 @@
     "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
-    "vite": "^6.2.2"
+    "jsdom": "^26.1.0",
+    "vite": "^6.2.2",
+    "vitest": "^1.0.0"
   }
 }
