--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   db:
-    image: postgres:17
+    build:
+      context: ./backend
+      dockerfile: Dockerfile-db
     container_name: randomi-db
     ports:
       - '5432:5432'
@@ -9,6 +11,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    restart: always
     
     volumes:
       - randomi_db_data:/var/lib/postgresql/data
@@ -16,15 +19,20 @@ services:
     networks:
       - randomi-backend
   
-  api:
-    build: ./backend
-    container_name: randomi-api
+  backend:
+    build:
+      context: ./backend
+      additional_contexts:
+        # this context is used to point to the parent assets folder
+        assets: .
+    container_name: randomi-backend
     ports:
       - "8080:8080"
     env_file: .env
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${POSTGRES_DB}
-      - BACKEND_SECRET_KEY={BACKEND_SECRET_KEY}
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${POSTGRES_DB}
+      BACKEND_URL: ${BACKEND_URL}
+      BACKEND_SECRET_KEY: ${BACKEND_SECRET_KEY}
     
     networks:
       - randomi-backend
@@ -33,7 +41,7 @@ services:
   
   frontend:
     build: ./frontend
-    container_name: randomi-front
+    container_name: randomi-frontend
     ports:
       - "5173:5173"
     env_file: .env
@@ -42,7 +50,7 @@ services:
       - /app/node_modules
     
     depends_on:
-      - api
+      - backend
 
 
 networks:
