--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,12 @@ on:
   push:
     paths:
       - 'backend/**'
+      - 'frontend/**'
       - '.github/workflows/ci.yml'
   pull_request:
     paths:
       - 'backend/**'
+      - 'frontend/**'
       - '.github/workflows/ci.yml'
 
 jobs:
@@ -33,9 +35,32 @@ jobs:
         with:
           toolchain: stable
           override: true
+      - name: Corriger automatiquement les warnings Rust
+        working-directory: ./backend
+        run: cargo fix --allow-dirty --allow-staged --bin backend --tests
       - name: Lancer les tests Rust du backend
         working-directory: ./backend
         env:
           DATABASE_URL: postgresql://testuser:testpassword@localhost:5432/testdb
           BACKEND_SECRET_KEY: test_secret
-        run: cargo test --all --verbose 
+        run: cargo test --all --verbose
+
+  test-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Installer Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Installer les dépendances frontend
+        working-directory: ./frontend
+        run: npm install
+      - name: Lancer les tests frontend
+        working-directory: ./frontend
+        run: |
+          if [ -f package.json ] && grep -q 'test' package.json; then
+            npm test
+          else
+            echo "Aucun script de test défini dans le frontend."
+          fi 
