--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gsap": "^3.12.7",
     "three": "^0.174.0",
+    "three-nebula": "^10.0.3",
     "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
