Ajout service mail avec lettre, serveur SMTP à configurer

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,11 @@ DATABASE_URL=postgresql://backend:root@localhost:5432/randomi
 # key for JWT validation
 BACKEND_SECRET_KEY=backend_secret_key
 
-# website url (for CORS)
+# website url (for CORS and password reset building link)
 WEBSITE_URL=http://localhost:5173
+
+# configure Mailer
+SMTP_SERVER=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM=
