Retrait étape cargo fetch dans Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,6 @@ FROM rust:1.84.1
 
 WORKDIR /usr/src/backend
 
-RUN mkdir src
-# create empty main.rs file
-RUN echo "fn main() {}" > src/main.rs
-COPY ./Cargo.toml ./Cargo.toml
-COPY ./Cargo.lock ./Cargo.lock
-# prefetch dependencies (in case of offline rebuild if no dependencies are changed)
-RUN cargo fetch --locked
-
 COPY ./src ./src
 COPY ./migrations ./migrations
 
@@ -19,9 +11,9 @@ COPY --from=assets ./assets/cards.json ./assets/cards.json
 COPY ./Cargo.toml ./Cargo.toml
 COPY ./diesel.toml ./diesel.toml
 
-RUN cargo install --bin backend --locked --path .
+RUN cargo install --path .
 
-ENV DATABASE_URL postgres://localhost:3307/randomi
+ENV DATABASE_URL postgres://localhost:5432/randomi
 ENV BACKEND_URL http://localhost:8080
 
 EXPOSE 8080
