--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,9 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
+# for password hashing
+bcrypt = "0.15"
+
 # for JWT tokens
 jsonwebtoken = "8.1"
 actix-service = "2.0.3"
