--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ COPY ./src ./src
 COPY ./migrations ./migrations
 
 # grab assets folder from build context "assets"
-COPY --from=assets ./assets/cards.json ./assets/cards.json
+COPY ./assets/cards.json ./assets/cards.json
 
 COPY ./Cargo.toml ./Cargo.toml
 COPY ./diesel.toml ./diesel.toml
