--- a/.github/workflows/deploy-digitalocean.yml
+++ b/.github/workflows/deploy-digitalocean.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Deploy to DigitalOcean App Platform
         uses: digitalocean/app_action@v1.1.5
         with:
-          spec: ./do-app.yaml
+          app_name: ${{ secrets.DIGITALOCEAN_APP_NAME }}
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} 
