--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -43,3 +43,4 @@ nanoid = "0.4.0"
 utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "time", "openapi_extensions"] }
 utoipa-actix-web = "0.1.2"
 utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
+actix-files = "0.6.6"
