--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,15 +5,13 @@ WORKDIR /usr/src/backend
 COPY ./src ./src
 COPY ./migrations ./migrations
 
-# grab assets folder from build context "assets"
-COPY --from=assets ./assets/cards.json ./assets/cards.json
-
 COPY ./Cargo.toml ./Cargo.toml
 COPY ./diesel.toml ./diesel.toml
 
 RUN cargo install --path .
 
-ENV DATABASE_URL postgres://localhost:5432/randomi
+ENV DATABASE_URL=postgres://localhost:5432/randomi
+ENV CARDS_FILE_PATH=/usr/src/backend/data/cards.json
 
 EXPOSE 8080
 
