--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,6 @@ services:
   backend:
     build:
       context: ./backend
-      additional_contexts:
-        # this context is used to point to the parent assets folder
-        assets: .
     container_name: randomi-backend
     ports:
       - "8080:8080"
@@ -32,6 +29,9 @@ services:
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${POSTGRES_DB}
       BACKEND_SECRET_KEY: ${BACKEND_SECRET_KEY}
+    
+    volumes:
+      - ./data:/usr/src/backend/data
     
     networks:
       - randomi-backend
@@ -41,9 +41,6 @@ services:
   frontend:
     build:
       context: ./frontend
-      additional_contexts:
-        # this context is used to point to the parent assets folder
-        assets: .
     container_name: randomi-frontend
     ports:
       - "5173:5173"
