--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 actix-web = "4"
 actix-ws = "0.3.0"
 actix-web-lab = "0.23.0"
+actix-files = "0.6.6"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
 r2d2 = "0.8.10"
 
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_derive = "1.0"
 
 # for password hashing
 bcrypt = "0.15"
@@ -43,4 +43,3 @@ nanoid = "0.4.0"
 utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "time", "openapi_extensions"] }
 utoipa-actix-web = "0.1.2"
 utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
-actix-files = "0.6.6"
