Déplacement des lobbies dans polodb, reste à trouver un fix pour la recherche d'un élément dans un vecteur avec find()

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ SMTP_SERVER=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_FROM=
+
+# PoloDB database path
+# should be temporary
+BACKEND_DB_PATH=/tmp/randomi-backend-db
